# MPS-Project

./: gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNIDriver.c
app/src/main/java/com/parlab/smarthome/: CameraActivity.java  CameraConnectionFragment.java  DetectorActivity.java  LegacyCameraConnectionFragment.java
app/src/main/java/com/parlab/smarthome/customview/: AutoFitTextureView.java  OverlayView.java  RecognitionScoreView.java  ResultsView.java
app/src/main/java/com/parlab/smarthome/driver/: JNIDriver.java  JNIListener.java
app/src/main/java/com/parlab/smarthome/env/: BorderedText.java  ImageUtils.java  Logger.java  Size.java
app/src/main/java/com/parlab/smarthome/tflite/: SimilarityClassifier.java  TFLiteObjectDetectionAPIModel.java
app/src/main/java/com/parlab/smarthome/tracking/: MultiBoxTracker.java
app/src/main/java/org/tensorflow/lite/examples/detection/: CameraActivity.java  CameraConnectionFragment.java  DetectorActivity.java  LegacyCameraConnectionFragment.java  Size.java
app/src/main/java/org/tensorflow/lite/examples/detection/env/: ImageUtils.java
app/src/main/res/drawable/: ic_baseline_switch_camera_24.xml  ic_launcher_facerec_foreground.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  image_edit_dialog.xml  tfe_od_camera_connection_fragment_tracking.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
